--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
 
         <FrameLayout
                 android:id="@+id/activity_main_frame_layout"
+                android:layout_marginTop="56dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_constraintTop_toBottomOf="@+id/toolbar" />
