--- a/app/src/main/res/layout/fragment_estate_list.xml
+++ b/app/src/main/res/layout/fragment_estate_list.xml
@@ -3,12 +3,13 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:layout_marginTop="56dp"
              tools:context=".controllers.fragments.EstateListFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/estate_picture_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:layout_height="match_parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </FrameLayout>
