--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#81ADF9</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#383ffb</color>
     <color name="colorAccent">#FFFFFF</color>
+    <color name="orange_red">#ff8645</color>
+    <color name="light_grey">#e6e6e6</color>
 </resources>
