--- a/app/src/main/res/layout/activity_create_estate.xml
+++ b/app/src/main/res/layout/activity_create_estate.xml
@@ -24,6 +24,16 @@
                 android:layout_marginTop="60dp"
                 app:layout_constraintTop_toBottomOf="@+id/scrollView">
 
+
+            <ImageView
+                    android:id="@+id/imagetest"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/line6"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                     android:id="@+id/tvType"
                     android:layout_width="wrap_content"
@@ -99,7 +109,8 @@
                     android:inputType="number"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvSurface"
-                    tools:targetApi="lollipop" />
+                    tools:targetApi="lollipop"
+                    android:autofillHints="edit_surface" />
 
             <View
                     android:id="@+id/line2"
@@ -205,7 +216,7 @@
 
 
             <CheckBox
-                    android:id="@+id/checkbox_parc"
+                    android:id="@+id/checkbox_park"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -232,7 +243,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:backgroundTint="@color/colorPrimary"
-                    android:text="@string/school"
+                    android:text="@string/subway"
                     app:layout_constraintStart_toStartOf="@+id/checkbox_shops"
                     app:layout_constraintTop_toBottomOf="@+id/checkbox_school"
                     tools:targetApi="lollipop" />
@@ -528,9 +539,23 @@
 
     </androidx.core.widget.NestedScrollView>
 
+    <Button
+            android:id="@+id/button_validate"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
+            android:layout_margin="10dp"
+            android:textSize="13sp"
+            android:text="@string/validate"
+            android:textColor="@android:color/white"
+            android:background="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="@+id/include"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/scrollView" />
+
     <include
+            android:id="@+id/include"
             layout="@layout/toolbar_create"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
