--- a/app/src/main/res/layout/detail_picture_item.xml
+++ b/app/src/main/res/layout/detail_picture_item.xml
@@ -15,7 +15,6 @@
             android:layout_height="100dp"
             android:layout_marginStart="3dp"
             android:layout_marginEnd="3dp"
-            android:src="@drawable/maison_contemporaine"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,6 +23,7 @@
             android:layout_width="100dp"
             android:layout_height="20dp"
             android:textColor="@android:color/white"
+            android:gravity="center_horizontal"
             app:layout_constraintBottom_toBottomOf="@+id/picture_detail"
             app:layout_constraintEnd_toEndOf="@+id/picture_detail" />
 
