--- a/app/src/main/res/layout-w600dp-land/activity_create_estate.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_create_estate.xml
@@ -14,7 +14,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="59dp"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar">
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            tools:layout_editor_absoluteX="0dp">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -39,10 +40,35 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:popupBackground="@android:color/white"
                     android:layout_marginTop="10dp"
+                    android:popupBackground="@android:color/white"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvType" />
+
+            <TextView
+                    android:id="@+id/apart_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/nbr_of_rooms"
+                    android:textColor="@android:color/black"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline"
+                    app:layout_constraintStart_toEndOf="@+id/type_spinner"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:visibility="gone"/>
+
+            <EditText
+                    android:id="@+id/edit_apart_nbr"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@android:color/white"
+                    android:hint="0"
+                    android:inputType="number"
+                    app:layout_constraintEnd_toEndOf="@id/guideline"
+                    app:layout_constraintStart_toStartOf="@+id/apart_number"
+                    app:layout_constraintTop_toBottomOf="@+id/apart_number"
+                    android:visibility="gone"/>
 
             <View
                     android:id="@+id/line1"
@@ -110,6 +136,7 @@
                     android:layout_marginTop="20dp"
                     android:text="@string/nbr_of_rooms"
                     android:textColor="@android:color/black"
+                    app:layout_constraintEnd_toStartOf="@+id/tv_nbr_bed"
                     app:layout_constraintStart_toStartOf="@+id/guideline"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -123,6 +150,51 @@
                     android:inputType="number"
                     app:layout_constraintStart_toStartOf="@+id/tv_rooms"
                     app:layout_constraintTop_toBottomOf="@+id/tv_rooms" />
+
+            <TextView
+                    android:id="@+id/tv_nbr_bed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/nbr_of_bedrooms"
+                    android:textColor="@android:color/black"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/guideline"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                    android:id="@+id/edit_nbr_bed"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@android:color/white"
+                    android:hint="0"
+                    android:inputType="number"
+                    app:layout_constraintStart_toStartOf="@+id/tv_nbr_bed"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_nbr_bed" />
+
+
+            <TextView
+                    android:id="@+id/tv_nbr_bath"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/nbr_of_bathrooms"
+                    android:textColor="@android:color/black"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/tv_nbr_bed"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                    android:id="@+id/edit_nbr_bath"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@android:color/white"
+                    android:hint="0"
+                    android:inputType="number"
+                    app:layout_constraintStart_toStartOf="@+id/tv_nbr_bath"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_nbr_bath" />
 
             <View
                     android:id="@+id/line3"
@@ -342,9 +414,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:layout_marginStart="20dp"
-                    android:background="@android:color/white"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="20dp"
+                    android:background="@android:color/white"
                     app:layout_constraintTop_toBottomOf="@+id/tv_pictures" />
 
             <ImageButton
