--- a/app/src/main/res/layout-w600dp-land/fragment_detail_estate.xml
+++ b/app/src/main/res/layout-w600dp-land/fragment_detail_estate.xml
@@ -93,6 +93,7 @@ Référence annonce : 07645_6296D"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginStart="15dp"
+                android:background="@color/colorPrimary"
                 android:layout_marginTop="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -128,6 +129,7 @@ Référence annonce : 07645_6296D"
                 android:layout_height="24dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="25dp"
+                android:background="@color/colorPrimary"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_surface" />
 
@@ -159,6 +161,7 @@ Référence annonce : 07645_6296D"
         <ImageView
                 android:id="@+id/icon_nbr_bathrooms"
                 android:layout_width="24dp"
+                android:background="@color/colorPrimary"
                 android:layout_height="24dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="25dp"
@@ -197,6 +200,7 @@ Référence annonce : 07645_6296D"
                 android:layout_height="24dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="25dp"
+                android:background="@color/colorPrimary"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_nbr_bathrooms" />
 
@@ -231,6 +235,7 @@ Référence annonce : 07645_6296D"
                 android:layout_height="24dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
+                android:background="@color/colorPrimary"
                 app:layout_constraintStart_toEndOf="@+id/tv_nbr_bathrooms"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -258,6 +263,16 @@ Référence annonce : 07645_6296D"
                 app:layout_constraintStart_toEndOf="@+id/icon_location"
                 app:layout_constraintTop_toBottomOf="@id/tv_location" />
 
+
+        <TextView
+                android:id="@+id/text_location_additional"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="route de Paris"
+                android:textSize="13dp"
+                app:layout_constraintEnd_toEndOf="@+id/text_location_num_street"
+                app:layout_constraintTop_toBottomOf="@id/text_location_num_street" />
+
         <TextView
                 android:id="@+id/text_location_num_type"
                 android:layout_width="100dp"
@@ -266,7 +281,7 @@ Référence annonce : 07645_6296D"
                 android:text="apt 6"
                 android:textSize="13dp"
                 app:layout_constraintStart_toStartOf="@id/text_location_num_street"
-                app:layout_constraintTop_toBottomOf="@id/text_location_num_street" />
+                app:layout_constraintTop_toBottomOf="@id/text_location_additional" />
 
         <TextView
                 android:id="@+id/text_location_town"
