--- a/app/src/main/res/layout/fragment_detail_estate.xml
+++ b/app/src/main/res/layout/fragment_detail_estate.xml
@@ -94,6 +94,7 @@ Référence annonce : 07645_6296D"
                 android:layout_height="24dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="20dp"
+                android:background="@color/colorPrimary"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -127,6 +128,7 @@ Référence annonce : 07645_6296D"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginStart="16dp"
+                android:background="@color/colorPrimary"
                 android:layout_marginTop="25dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_surface" />
@@ -162,6 +164,7 @@ Référence annonce : 07645_6296D"
                 android:layout_height="24dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="25dp"
+                android:background="@color/colorPrimary"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_nbr_of_rooms" />
 
@@ -197,6 +200,7 @@ Référence annonce : 07645_6296D"
                 android:layout_height="24dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="25dp"
+                android:background="@color/colorPrimary"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_nbr_bathrooms" />
 
@@ -231,6 +235,7 @@ Référence annonce : 07645_6296D"
                 android:layout_height="24dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="16dp"
+                android:background="@color/colorPrimary"
                 app:layout_constraintEnd_toStartOf="@+id/tv_location"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -258,6 +263,16 @@ Référence annonce : 07645_6296D"
                 app:layout_constraintTop_toBottomOf="@id/tv_location" />
 
         <TextView
+                android:id="@+id/text_location_additional"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="48dp"
+                android:text="route de PAris"
+                android:textSize="13dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/text_location_num_street" />
+
+        <TextView
                 android:id="@+id/text_location_num_type"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
@@ -265,7 +280,7 @@ Référence annonce : 07645_6296D"
                 android:text="apt 6"
                 android:textSize="13dp"
                 app:layout_constraintStart_toStartOf="@id/text_location_num_street"
-                app:layout_constraintTop_toBottomOf="@id/text_location_num_street" />
+                app:layout_constraintTop_toBottomOf="@id/text_location_additional" />
 
         <TextView
                 android:id="@+id/text_location_town"
