app flow is ok. Add searchFragment

--- a/app/src/main/res/layout/activity_create_estate.xml
+++ b/app/src/main/res/layout/activity_create_estate.xml
@@ -448,6 +448,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
+                    android:gravity="top"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="20dp"
                     android:background="@android:color/white"
@@ -604,7 +605,6 @@
                     android:layout_marginTop="20dp"
                     android:background="@android:color/white"
                     android:gravity="center"
-                    android:inputType="date"
                     android:textColor="@android:color/black"
                     app:layout_constraintEnd_toStartOf="@+id/guideline"
                     app:layout_constraintStart_toStartOf="parent"
