--- a/app/src/main/res/layout-w600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_main.xml
@@ -39,6 +39,15 @@
                 app:layout_constraintTop_toBottomOf="@+id/toolbar"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
+        <FrameLayout
+                android:id="@+id/activity_main_100_frame_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="56dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
